syntax = "proto3";

package apiDesignA3;

message Book {
    string isbn = 1;
    string title = 2;
    string author = 3;
    enum Genre {
        GENRE_UNSPECIFIED = 0;
        GENRE_HISTORICAL = 1;
        GENRE_ROMANCE = 2;
        GENRE_MYSTERY = 3;
        GENRE_THRILLER = 4;
    }
    Genre genre = 4; 
    optional int32 year = 5;
}

message InventoryItem {
    int32 inventoryNum = 1;
    oneof item {
        Book book = 2;
    }
    enum Status {
        AVAILABLE = 0;
        TAKEN = 1;
    }
    Status status = 3;
}